Thu Feb 10 13:52:42 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* configure.in, win32/Makefile.sub (LIBS, COMMON_HEADERS): use
	  winsock2 on mswin32/mingw.

	* ext/socket/extconf.rb: ditto.

	* win32/win32.c (StartSockets): ditto.

	* win32/win32.h: ditto.

Thu Feb 10 12:09:16 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extract_makefile): default to true if not compiled
	  previously.

	* ext/extmk.rb (extmake): create dummy makefile if extconf failed.

Thu Feb 10 12:07:10 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (init_stdhandle): assign standard file handles.

	* bcc32/Makefile.sub (COMMON_LIBS): add libraries included in
	  import32.lib.

	* lib/mkmf.rb (create_makefile): restrict prefixing with srcdir to
	  rule lines, add search path to implicit rules, and set Borland make
	  special macros for search path.

	* win32/win32.c, win32/win32.h (read): aboid a BCC runtime bug.

Wed Feb  9 16:33:05 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/socket.c (wait_connectable): fixed wrong condition.

Wed Feb  9 14:42:28 2005  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* eval.c (scope_dup): add volatile not to optimize tbl.

Wed Feb  9 10:02:02 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/tk/make-tkutil, ext/tk/tkutil/subconf.rb: no longer used.

	* ext/tk/tkutil/extconf.rb: need to compile tkutil. [ruby-dev:25607]

Tue Feb  8 23:48:36 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb: reject :instance_eval, :class_eval, :module_eval
	  [druby-ja:117]

Tue Feb  8 22:38:28 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* keywords, parse.y: separate EXPR_VALUE from EXPR_BEG.
	  fixed: [ruby-core:04310], [ruby-core:04368]

Tue Feb  8 00:19:02 2005  Tanaka Akira  <akr@m17n.org>

	* lib/resolv.rb (Resolv::DNS::Name#subdomain_of?): new method.
	  (Resolv::DNS::Name#inspect): ditto.
	  Suggested by Sam Roberts.  [ruby-talk:129086]

Mon Feb  7 23:14:11 2005  Tanaka Akira  <akr@m17n.org>
